--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Scaffold</string>
-    <string name="title_activity_main">title</string>
+    <string name="app_name">Juego 3</string>
+    <string name="title_activity_main">Bird Killer</string>
     <string name="hello_world">Hello</string>
     <string name="pause">Game paused</string>
     <string name="start">Iniciar juego</string>
